# hora-graph-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
.hora/: project-id
benches/: bm25.rs  crud.rs  hybrid_search.rs  storage_backends.rs  traversal.rs  vector_search.rs
bindings/c/: Cargo.toml  README.md  build.rs  cbindgen.toml  hora_graph_core.h
bindings/c/src/: lib.rs
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
bindings/node/__test__/: index.test.mjs
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/hora_graph_core/: __init__.py  hora_graph_core.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_hora.py
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: web.rs
docs/: 00-vision.md  01-architecture.md  02-data-layout.md  03-storage-engine.md  04-bio-inspired.md  05-search-engine.md  06-temporal.md  07-api-design.md  08-concurrency.md  09-error-handling.md  10-testing-strategy.md  11-benchmarks.md  12-dependencies.md  13-risks.md  14-migration.md  GUIDE-FR.md  GUIDE.md  INDEX.md  PERFORMANCE.md  plan-original.md
docs/phases/: v0.1-foundations.md  v0.2-perception.md  v0.3-memory.md  v0.4-consolidation.md  v0.5-robustness.md  v0.6-storage-universal.md  v0.7-language-universal.md  v1.0-release.md
docs/research/: act-r-implementation.md  embedding-strategy.md  hnsw-from-scratch.md  napi-rs-patterns.md  page-based-format.md  simd-cross-platform.md
src/: error.rs  lib.rs
src/core/: dedup.rs  edge.rs  entity.rs  episode.rs  mod.rs  types.rs
src/memory/: activation.rs  consolidation.rs  dark_nodes.rs  fsrs.rs  mod.rs  reconsolidation.rs  spreading.rs
src/search/: bm25.rs  hybrid.rs  mod.rs  vector.rs
src/storage/: format.rs  memory.rs  mod.rs  pg.rs  sqlite.rs  traits.rs
src/storage/embedded/: btree.rs  mmap.rs  mod.rs  page.rs  recovery.rs  wal.rs
tests/: conformance.rs
