[package]
name = "hora-graph-core"
version = "0.1.0"
edition = "2021"
description = "Bio-inspired embedded knowledge graph engine"
license = "MIT OR Apache-2.0"
rust-version = "1.70"

[features]
default = ["embedded"]
embedded = []

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crud"
harness = false

[[bench]]
name = "traversal"
harness = false

[[bench]]
name = "vector_search"
harness = false

[[bench]]
name = "bm25"
harness = false

[[bench]]
name = "hybrid_search"
harness = false
