[package]
name = "hora-graph-wasm"
version = "1.0.0"
edition = "2021"
description = "Bio-inspired embedded knowledge graph engine — WASM binding"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vivien83/hora-graph-core"
homepage = "https://github.com/Vivien83/hora-graph-core#wasm"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hora-graph-core = { path = "../..", features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
